Changed AndroidManifest, BuildGradle, Filters_screen, dummy_data naming convension, and other naming convension changes

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ArkoBandyopadhyay.practice2">
+    package="com.ArkoBandyopadhyay.cookfood">
    <application
-        android:label="practice2"
+        android:label="Cook Food"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
