--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = practice2
+PRODUCT_NAME = cookfood
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.ArkoBandyopadhyay.practice2
+PRODUCT_BUNDLE_IDENTIFIER = com.ArkoBandyopadhyay.cookfood
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.ArkoBandyopadhyay. All rights reserved.
